--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:markdig="clr-namespace:Markdig.Wpf;assembly=Markdig.Wpf"
+        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
         Title="AI Code Analyzer" Height="800" Width="1500">
 
@@ -11,6 +11,43 @@
         <Style x:Key="MenuItemStyle" TargetType="MenuItem">
             <Setter Property="Padding" Value="8,3" />
             <Setter Property="FontSize" Value="12" />
+        </Style>
+        <Style TargetType="Button" x:Key="ZoomButtonStyle">
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderBrush" Value="Gray" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="3">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#e0e0e0"/>
+                                <Setter Property="BorderBrush" Value="#888"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" Value="#c0c0c0"/>
+                                <Setter Property="BorderBrush" Value="#666"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Foreground" Value="#aaa" />
+                                <Setter Property="BorderBrush" Value="#ddd" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
         <!-- Enhanced Send Button Style -->
         <Style x:Key="EnhancedButtonStyle" TargetType="Button">
@@ -385,20 +422,40 @@
                                     Click="BtnNextResponse_Click"
                                     IsEnabled="False" Margin="5,0,0,0" />
                         </StackPanel>
+                        
+                        <!-- Zoom Controls -->
+                        <StackPanel Orientation="Horizontal"
+                                    Grid.Column="3"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    Margin="8">
 
-                        <!-- Zoom Controls Panel -->
-                        <StackPanel Orientation="Horizontal" Grid.Column="3" HorizontalAlignment="Right">
-                            <Button x:Name="BtnZoomOut" Content="-" Width="25" Height="30" Click="BtnZoomOut_Click"
-                                    ToolTip="Zoom Out (Ctrl+Scroll)" Margin="0,0,2,0" />
-                            <TextBlock x:Name="TxtZoomLevel" Text="100%" VerticalAlignment="Center" Margin="5,0"
-                                       ToolTip="Current Zoom Level" />
-                            <Button x:Name="BtnZoomIn" Content="+" Width="25" Height="30" Click="BtnZoomIn_Click"
-                                    ToolTip="Zoom In (Ctrl+Scroll)" Margin="2,0,5,0" />
-                            <Button x:Name="BtnResetZoom" Content="Reset" Height="30" Click="BtnResetZoom_Click"
-                                    ToolTip="Reset Zoom (100%)" />
+                            <Button x:Name="BtnZoomOut"
+                                    Width="32" Height="32"
+                                    FontSize="18"
+                                    Content="−"
+                                    Click="BtnZoomOut_Click"
+                                    Style="{StaticResource ZoomButtonStyle}"
+                                    ToolTip="Zoom Out the Response" />
+
+                            <Button x:Name="BtnResetZoom"
+                                    Width="32" Height="32"
+                                    FontSize="18"
+                                    Content="↻"
+                                    Click="BtnResetZoom_Click"
+                                    Style="{StaticResource ZoomButtonStyle}"
+                                    ToolTip="Reset Zoom to 100%" />
+
+                            <Button x:Name="BtnZoomIn"
+                                    Width="32" Height="32"
+                                    FontSize="18"
+                                    Content="+"
+                                    Click="BtnZoomIn_Click"
+                                    Style="{StaticResource ZoomButtonStyle}"
+                                    ToolTip="Zoom In the Response" />
                         </StackPanel>
                     </Grid>
-
+                    
                     <!-- Bottom Control Bar (Save/Toggle) -->
                     <Grid DockPanel.Dock="Bottom" Margin="0,5,0,0">
                         <Grid.ColumnDefinitions>
@@ -418,37 +475,13 @@
                                 Margin="0,0,2,0" Click="BtnSaveResponse_Click" IsEnabled="False" />
                         <Button x:Name="BtnSaveEdits" Content="Apply Edits" Grid.Column="3" Height="30"
                                 Margin="0,0,2,0" Click="SaveEdits_Click" IsEnabled="False" />
-                        <Button x:Name="BtnToggleMarkdown" Content="Show Raw Text" Grid.Column="4" Height="30"
-                                Margin="2,0,0,0" Click="ToggleMarkdownView_Click" IsEnabled="False" />
+                        <Button x:Name="BtnToggleHtml" Content="Show Raw Text" Grid.Column="4" Height="30"
+                                Margin="2,0,0,0" IsEnabled="False" Click="BtnToggleHtml_Click" />
                     </Grid>
 
-                    <!-- Markdown Display -->
                     <Grid>
-                        <!-- Regular TextBox (for raw view) -->
-                        <TextBox x:Name="TxtResponse"
-                                 TextWrapping="Wrap"
-                                 AcceptsReturn="True"
-                                 IsReadOnly="False"
-                                 VerticalScrollBarVisibility="Auto"
-                                 HorizontalScrollBarVisibility="Auto"
-                                 FontFamily="Consolas"
-                                 Visibility="Collapsed"
-                                 PreviewMouseWheel="TxtResponse_PreviewMouseWheel" />
-
-                        <!-- Markdown Viewer -->
-                        <ScrollViewer x:Name="MarkdownScrollViewer" Visibility="Visible"
-                                      VerticalScrollBarVisibility="Disabled"
-                                      HorizontalScrollBarVisibility="Disabled"
-                                      PanningMode="None"
-                                      CanContentScroll="False"
-                                      PreviewMouseWheel="MarkdownScrollViewer_PreviewMouseWheel"
-                                      SizeChanged="MarkdownScrollViewer_SizeChanged">
-                            <!-- MarkdownViewer IS a FlowDocumentScrollViewer -->
-                            <markdig:MarkdownViewer x:Name="MarkdownViewer"
-                                                    Background="White"
-                                                    Padding="10"
-                                                    HorizontalAlignment="Stretch" />
-                        </ScrollViewer>
+                        <!-- WebView2 HTML Viewer -->
+                        <wv2:WebView2 x:Name="HtmlViewer" Visibility="Visible" />
                     </Grid>
                 </DockPanel>
             </GroupBox>
