--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -482,6 +482,17 @@
                     <Grid>
                         <!-- WebView2 HTML Viewer -->
                         <wv2:WebView2 x:Name="HtmlViewer" Visibility="Visible" />
+
+                        <!-- Loading Overlay (initially hidden) -->
+                        <Grid x:Name="LoadingOverlay" Background="#80000000" Visibility="Collapsed" 
+                              HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+                              IsHitTestVisible="True">
+                            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" >
+                                <ProgressBar IsIndeterminate="True" Width="120" Height="20" />
+                                <TextBlock Text="Loading, please wait..." Foreground="White" FontWeight="Bold" 
+                                           FontSize="14" Margin="10,10,10,0" HorizontalAlignment="Center" />
+                            </StackPanel>
+                        </Grid>
                     </Grid>
                 </DockPanel>
             </GroupBox>
