--- a/AICodeAnalyzer/AboutWindow.xaml
+++ b/AICodeAnalyzer/AboutWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="AICodeAnalyzer.AboutWindow"
+﻿<mah:MetroWindow x:Class="AICodeAnalyzer.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About" Height="550" Width="550" 
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" Title="About" Height="550" Width="550" 
         WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
@@ -55,4 +55,4 @@
                 Padding="10,5" />
         </StackPanel>
     </Grid>
-</Window>
+</mah:MetroWindow>
