Fix typos in MenuItem headers and adjust configuration window height.
Corrected improper closing braces in `BaseTheme` and `AccentColors` MenuItem headers in `MainWindow.xaml`. Increased the height of the configuration window from 500 to 600 for better UI layout.

--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -100,14 +100,14 @@
                 </MenuItem>
             </MenuItem>
             <MenuItem Header="Theme" Style="{StaticResource MenuItemStyle}">
-                <MenuItem Header="BaseTheme}">
+                <MenuItem Header="BaseTheme">
                     <MenuItem.Icon>
                         <Image Source="pack://application:,,,/images/theme.png" Width="16" Height="16" />
                     </MenuItem.Icon>
                     <MenuItem x:Name="Light" Header="Light" Click="ChangeBaseTheme_Click" IsCheckable="True" />
                     <MenuItem x:Name="Dark" Header="Dark" Click="ChangeBaseTheme_Click" IsCheckable="True" />
                 </MenuItem>
-                <MenuItem Header="AccentColors}">
+                <MenuItem Header="AccentColors">
                     <MenuItem.Icon>
                         <Image Source="pack://application:,,,/images/theme.png" Width="16" Height="16" />
                     </MenuItem.Icon>
